<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_server_url"
        android:textSize="18sp"
        android:textColor="?attr/colorAccent"
        android:textAllCaps="false"
        android:textStyle="normal|bold"
        android:fontFamily="sans-serif"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:ems="10"
        android:id="@+id/server_url"
        android:hint="@string/hint_server_url" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_platform_uuid"
        android:textSize="18sp"
        android:textColor="?attr/colorAccent"
        android:textStyle="normal|bold"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/platform_uuid"
        android:inputType="text"
        android:hint="@string/hint_platform_uuid" />

    <TextView
        android:text="@string/title_platform_secret"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="?attr/colorAccent"
        android:textStyle="normal|bold"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/platform_secret"
        android:hint="@string/hint_platform_secret" />
</LinearLayout>